--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,25 @@ li.hoverlist:hover {
 	transition: all 0.3s ease-in-out;
 }
 
+.adding {
+	position: relative;
+}
+
+.adding:after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	margin-top: 1px;
+	height: 2px;
+	background-color: #000;
+	transform: scaleX(0);
+	transition: all 0.3s ease-in-out;
+}
+
+.adding:hover:after {
+	transform: scaleX(1);
+	transition: all 0.3s ease-in-out;
+}
+
